Suppression des méthodes deprecated