@@ -1,5 +1,4 @@
-package org.impotch.util;
-/**
+/*
  * This file is part of impotch/util.
  * <p>
  * impotch/util is free software: you can redistribute it and/or modify
@@ -15,25 +14,35 @@ package org.impotch.util;
  * along with impotch/util.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+package org.impotch.util;
+
 import java.math.BigDecimal;
 import java.text.NumberFormat;
 import java.util.Locale;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.impotch.util.BigDecimalUtil.trim;
+import static org.impotch.util.BigDecimalUtil.formatRight;
 
 import org.junit.jupiter.api.Test;
 
+
 public class BigDecimalUtilTest {
 
-    private static final Locale SUISSE_ROMANDE = new Locale("fr", "CH");
+    private static final Locale SUISSE_ROMANDE = Locale.of("fr", "CH");
 
     @Test
     public void formattage() {
         NumberFormat format = NumberFormat.getInstance(SUISSE_ROMANDE);
-        assertThat(BigDecimalUtil.formatRight(new BigDecimal("12.346"), format, 5)).isEqualTo("   12,346");
-        assertThat(BigDecimalUtil.formatRight(new BigDecimal("0.01"), format, 5)).isEqualTo("    0,01");
-        assertThat(BigDecimalUtil.formatRight(new BigDecimal("0"), format, 5)).isEqualTo("    0");
+        assertThat(formatRight(new BigDecimal("12.346"), format, 5)).isEqualTo("   12,346");
+        assertThat(formatRight(new BigDecimal("0.01"), format, 5)).isEqualTo("    0,01");
+        assertThat(formatRight(new BigDecimal("0"), format, 5)).isEqualTo("    0");
         // La suppression des 00 après la virgule est due au format et non à la méthode
-        assertThat(BigDecimalUtil.formatRight(new BigDecimal("0.00"), format, 5)).isEqualTo("    0");
+        assertThat(formatRight(new BigDecimal("0.00"), format, 5)).isEqualTo("    0");
+    }
+
+    @Test
+    public void trimDeux() {
+        assertThat(trim(new BigDecimal("2.00"))).isEqualTo(BigDecimal.TWO);
     }
 }
